// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Field.Float for Resource.Form Empty 1`] = `
<span
  class="is-primary is-top is-medium b-tooltip"
  data-label=""
  style="transition-delay: 0ms; width: 100%;"
>
  <div
    class="field"
    style="width: inherit;"
  >
    <!---->
     
    <div
      class="control is-clearfix"
    >
      <input
        autocomplete="on"
        class="input"
        step="0.01"
        type="number"
      />
       
      <!---->
       
      <!---->
       
      <!---->
    </div>
     
    <!---->
  </div>
</span>
`;

exports[`Field.Float for Resource.Form With value, label, icon and placeholder 1`] = `
<span
  class="is-primary is-top is-medium b-tooltip"
  data-label=""
  style="transition-delay: 0ms; width: 100%;"
>
  <div
    class="field"
    style="width: inherit;"
  >
    <label
      class="label"
    >
      My field label
    </label>
     
    <div
      class="control has-icons-left is-clearfix"
    >
      <input
        autocomplete="on"
        class="input"
        max="20"
        min="5"
        placeholder="An explicit placeholder"
        step="0.01"
        type="number"
      />
       
      <span
        class="icon is-left"
      >
        <i
          class="fa fa-user fa-lg"
        />
      </span>
       
      <!---->
       
      <!---->
    </div>
     
    <!---->
  </div>
</span>
`;

exports[`Field.Float for Resource.Form With value, label, readonly 1`] = `
<span
  class="is-primary is-top is-medium b-tooltip"
  data-label=""
  style="transition-delay: 0ms; width: 100%;"
>
  <div
    class="field"
    style="width: inherit;"
  >
    <label
      class="label"
    >
      My field label
    </label>
     
    <span>
      15.123
    </span>
     
    <!---->
  </div>
</span>
`;

exports[`Field.Float for Resource.List Empty 1`] = `
<div>
  <span>
    
  </span>
</div>
`;

exports[`Field.Float for Resource.List With value 1`] = `
<div>
  <span>
    10.10
  </span>
</div>
`;
